# Data-Pipeline-Simulator

./: .gitignore  CMakeLists.txt  Event.json
include/: EventGenerator.h  EventProcessor.h
src/: EventGenerator.cpp  EventProcessor.cpp  main.cpp
